[tool.poetry]
name = "ordered_set-stubs"
version = "0.1.3"
description = "Stubs with type annotations for ordered-set Python library"
readme = "README.md"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "MIT"
repository = "https://github.com/rominf/ordered-set-stubs"
packages = [
    {include = "ordered_set-stubs"}
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.3"
# The typing module is not in the stdlib in Python 2.7, 3.3, 3.4
typing = { version = "^3.6", python = "~2.7 || ~3.3 || ~3.4" }
